--- a/FD.SampleData/FD.SampleData.csproj
+++ b/FD.SampleData/FD.SampleData.csproj
@@ -2,12 +2,28 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Authors>Francisco Araujo</Authors>
+    <PackageId>FreelanceDevelopers.SampleData</PackageId>
+    <Description>Library for adding sample data context to test applications, use sqlite in memory database to keep data and allow initial seeding.</Description>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/araujofrancisco/FD.DataProvider/tree/master/FD.SampleData</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/araujofrancisco/FD.DataProvider</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>sqlite, dbcontextfactory, data-generators</PackageTags>
+    <PackageReleaseNotes>Initial release.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FreelanceDevelopers.Blazor.Core" Version="1.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.7" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
