Update package version and release notes

--- a/FD.SampleData/FD.SampleData.csproj
+++ b/FD.SampleData/FD.SampleData.csproj
@@ -10,9 +10,9 @@
     <RepositoryUrl>https://github.com/araujofrancisco/FD.DataProvider</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>sqlite, dbcontextfactory, data-generators</PackageTags>
-    <PackageReleaseNotes>- Reworked WeatherForecast model and relationship.
+    <PackageReleaseNotes>- Fixed GetReportType method including ForecastReportTypes in the query.
 </PackageReleaseNotes>
-    <Version>1.0.4</Version>
+    <Version>1.0.5</Version>
   </PropertyGroup>
 
   <ItemGroup>
